<resources>
    <string name="app_name">Togther</string>
    <string name="title_activity_post">Create Your Post</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="titlehint">Title</string>
    <string name="countryHint">Country</string>
    <string name="stateHint">State</string>
    <string name="cityHint">City</string>
    <string name="themeHint">Theme: holiday,island,etc</string>
    <string name="descriptionHint">Description</string>
    <string name="btn_upload">upload</string>
    <string name="btn_submit">Submit</string>
    <string name="Imagebtn_camera">Camera</string>
    <string name="fail_login">Fail to login</string>
    <string name="welcomeHint">Welcome to Together</string>

</resources>
